@@ -1,6 +1,13 @@
+:toc: macro
+:toclevels: 1
+
 = Change Log
 
+toc::[]
+
 == v0.3.0.0
+
+== next
 
 === Features
 * Queueing and pressure system now self tuning, performance over default old tuning values (`softMaxNumberMessagesBeyondBaseCommitOffset` and `maxMessagesToQueue`) has doubled.
@@ -13,6 +20,9 @@ It maintains the partition ordering characteristic that all keys are processed i
 * https://github.com/confluentinc/parallel-consumer/issues/37[Support BitSet encoding lengths longer than Short.MAX_VALUE #37] - adds new serialisation formats that supports wider range of offsets - (32,767 vs  2,147,483,647) for both BitSet and run-length encoding.
 * Commit modes have been renamed to make it clearer that they are periodic, not per message.
 * Minor performance improvement, switching away from concurrent collections.
+
+=== Fixes
+* Maximum offset payload space increased to correctly not be inversely proportional to assigned partition quantity.
 
 == v0.2.0.3
 
